# bevy_godot4

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  run_godot.rs
examples/simple/: Cargo.toml
examples/simple/godot/: bevy_app_singleton.tscn  icon.svg.import  main.tscn  project.godot  simple.gdextension  simple.gdextension.uid  sprite.tscn
examples/simple/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: app.rs  assets.rs  component.rs  erased_gd.rs  input.rs  lib.rs  scene.rs  scene_tree.rs  signals.rs  utils.rs
