[package]
name = "bevy_godot4"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
# serde = ["godot/serde"]
assets = [] # experimental feature, see assets::GodotResourceLoader

[dependencies]
anyhow = "1"
bevy = { version = "0.14", default-features = false, features = ["bevy_asset"] }
godot = "0.1.3"
bevy_godot4_proc_macros = { path = "./proc_macros" }
lazy_static = "1.4.0"
send_wrapper = "0.6"
