[package]
name = "simple"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
path = "../run_godot.rs"
name = "simple"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_asset"] }
bevy_godot4 = { path = "../../../bevy_godot4" }
godot = { git = "https://github.com/godot-rust/gdext", rev = "885bb91926c76867093d85208b33aa80c87183b6" }
